--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,3 +1,6 @@
 //= require normalize-css/normalize
 //= require_self
-//= require_tree .
+//= require heading
+//= require dashboard
+
+@import url('http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic|Eater|Caesar+Dressing|Shojumaru|Butcherman|Ultra');
