--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -1,3 +1,20 @@
-// Place all the styles related to the dashboard controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+body {
+  padding: 1em;
+}
+
+h1 {
+  margin: 0;
+  margin-bottom: 1em;
+
+  font-size: 60px;
+
+  font-family: 'Shojumaru', cursive;
+  // font-family: 'Eater', cursive;
+  // font-family: 'Caesar Dressing', cursive;
+  // font-family: 'Butcherman', cursive;
+  // font-family: 'Ultra', serif;
+}
+
+body {
+  font-family: 'Lato', sans-serif;
+}
